Lists are constructed with Values